headers/glfw3.h

 
 
/*************************************************************************
 * GLFW API types
 *************************************************************************/
 
typedef void (*GLFWglproc)(void);
 
typedef void (*GLFWvkproc)(void);
typedef struct GLFWmonitor GLFWmonitor;
 
typedef struct GLFWwindow GLFWwindow;
 
typedef struct GLFWcursor GLFWcursor;
 
typedef void (* GLFWerrorfun)(int error_code, const char* description);
 
typedef void (* GLFWwindowposfun)(GLFWwindow* window, int xpos, int ypos);
 
typedef void (* GLFWwindowsizefun)(GLFWwindow* window, int width, int height);
 
typedef void (* GLFWwindowclosefun)(GLFWwindow* window);
 
typedef void (* GLFWwindowrefreshfun)(GLFWwindow* window);
 
typedef void (* GLFWwindowfocusfun)(GLFWwindow* window, int focused);
 
typedef void (* GLFWwindowiconifyfun)(GLFWwindow* window, int iconified);
 
typedef void (* GLFWwindowmaximizefun)(GLFWwindow* window, int maximized);
 
typedef void (* GLFWframebuffersizefun)(GLFWwindow* window, int width, int height);
 
typedef void (* GLFWwindowcontentscalefun)(GLFWwindow* window, float xscale, float yscale);
 
typedef void (* GLFWmousebuttonfun)(GLFWwindow* window, int button, int action, int mods);
 
typedef void (* GLFWcursorposfun)(GLFWwindow* window, double xpos, double ypos);
 
typedef void (* GLFWcursorenterfun)(GLFWwindow* window, int entered);
 
typedef void (* GLFWscrollfun)(GLFWwindow* window, double xoffset, double yoffset);
 
typedef void (* GLFWkeyfun)(GLFWwindow* window, int key, int scancode, int action, int mods);
 
typedef void (* GLFWcharfun)(GLFWwindow* window, unsigned int codepoint);
 
typedef void (* GLFWcharmodsfun)(GLFWwindow* window, unsigned int codepoint, int mods);
 
typedef void (* GLFWdropfun)(GLFWwindow* window, int path_count, const char* paths[]);
 
typedef void (* GLFWmonitorfun)(GLFWmonitor* monitor, int event);
 
typedef void (* GLFWjoystickfun)(int jid, int event);
 
typedef struct GLFWvidmode
{
    int width;
    int height;
    int redBits;
    int greenBits;
    int blueBits;
    int refreshRate;
} GLFWvidmode;
 
typedef struct GLFWgammaramp
{
    unsigned short* red;
    unsigned short* green;
    unsigned short* blue;
    unsigned int size;
} GLFWgammaramp;
 
typedef struct GLFWimage
{
    int width;
    int height;
    unsigned char* pixels;
} GLFWimage;
 
typedef struct GLFWgamepadstate
{
    unsigned char buttons[15];
    float axes[6];
} GLFWgamepadstate;
 
 
/*************************************************************************
 * GLFW API functions
 *************************************************************************/
 
GLFWAPI int glfwInit(void);
 
GLFWAPI void glfwTerminate(void);
 
GLFWAPI void glfwInitHint(int hint, int value);
 
GLFWAPI void glfwGetVersion(int* major, int* minor, int* rev);
 
GLFWAPI const char* glfwGetVersionString(void);
 
GLFWAPI int glfwGetError(const char** description);
 
GLFWAPI GLFWerrorfun glfwSetErrorCallback(GLFWerrorfun callback);
 
GLFWAPI GLFWmonitor** glfwGetMonitors(int* count);
 
GLFWAPI GLFWmonitor* glfwGetPrimaryMonitor(void);
 
GLFWAPI void glfwGetMonitorPos(GLFWmonitor* monitor, int* xpos, int* ypos);
 
GLFWAPI void glfwGetMonitorWorkarea(GLFWmonitor* monitor, int* xpos, int* ypos, int* width, int* height);
 
GLFWAPI void glfwGetMonitorPhysicalSize(GLFWmonitor* monitor, int* widthMM, int* heightMM);
 
GLFWAPI void glfwGetMonitorContentScale(GLFWmonitor* monitor, float* xscale, float* yscale);
 
GLFWAPI const char* glfwGetMonitorName(GLFWmonitor* monitor);
 
GLFWAPI void glfwSetMonitorUserPointer(GLFWmonitor* monitor, void* pointer);
 
GLFWAPI void* glfwGetMonitorUserPointer(GLFWmonitor* monitor);